"me helped" nao rola ne

--- a/en-us/website-donate.yml
+++ b/en-us/website-donate.yml
@@ -11,5 +11,5 @@ website:
     donationBenefits: "Benefits at donate"
     activeDonators: "Active donators"
     inactiveDonators: "Inactive donators"
-    thanksToEveryone: "Thank you all that me helped!"
+    thanksToEveryone: "Thank you all that helped me!"
     areYouGoingToDonate: "Ownt, will you donate? :3"
