--- a/default/commands-social.yml
+++ b/default/commands-social.yml
@@ -4,7 +4,14 @@ commands:
     profile:
       profileshop: "Compre novos perfis em {0}"
     topreputation: 
-      description: "Veja os usuários com mais reputações!"
+      description: "Veja os usuários que deram, ou receberam, mais reputações!"
+      received: "recebidas"
+      given: "dadas"
+      receivedReputations: "{0} reputações recebidas"
+      givenReputations: "{0} reputações dadas"
+    bomdiaeciatop:
+      description: "Veja os usuários que venceram mais partidas do Bom Dia & Cia"
+      wonMatches: "Venceu {0} vezes o Bom Dia & Cia"
     reputation:
       reputationLink: "Quase pronto! Para dar a reputação, confirme ela em {0}"
       success: "{0} deu uma reputação para {1}, agora {5} possui **{2} reputações**! Quer dar uma reputação também? {3} {4}"
@@ -18,3 +25,9 @@ commands:
       invalidDateYearTooOld: "Data de nascimento inválida! Eu dúvido que você tenha nascido nessa data, já tomou os remédios hoje, vovôzinho?"
       invalidDateYearTooNew: "Data de nascimento inválida! Então... sabia que você precisa ter no mínimo 13 anos para poder utilizar o Discord? Está nos termos de uso e você pode ser suspenso do Discord caso você tenha menos que 13 anos!"
       successfullyChanged: "Sua data de nascimento foi alterada com sucesso!"
+    rankglobal:
+      description: "Veja o ranking global de experiência!"
+    xpnotifications:
+      description: "Ativa ou desativa as notificações de level up via mensagem direta"
+      enabledNotifications: "Você ativou as notificações de level up via mensagem direta!"
+      disabledNotifications: "Você desativou as notificações de level up via mensagem direta!"
