--- a/default/commands.yml
+++ b/default/commands.yml
@@ -5,7 +5,7 @@ commands:
   loriDoesntHavePermissionDiscord: "Eu queria executar este comando, mas infelizmente eu não tenho permissão para {0}... {1} Peça para alguém da administração dar esta permissão para mim! Obrigada! {2}"
   commandOnlyForOwner: "Apenas pessoas especiais podem usar este comando :3"
   userDoesntHavePermissionDiscord: "Você não tem permissão para usar este comando! Para utilizá-lo, você precisa ter permissão para {0}!"
-  userDoesNotExist: "Usuário inexistente!"
+  userDoesNotExist: "Eu procurei em todo o lugar, mas não encontrei nenhum usuário que se chame {0}! Lembre-se, eu procuro usuários por IDs, menções e nomes."
   errorWhileExecutingCommand: "Alguma coisa deu extremamente errada ao executar este comando... {0} Desculpe pela inconveniência. {1}"
   ifYouLikeMyFeaturesAndWantToHelp: "Se você gosta de usar as minhas funcionalidades e quer me ajudar, por favor, {0}"
   pleaseUpvote: "vote em mim! A cada voto que você dá você ganha recompensas (como sonhos!)! Você pode votar a cada 12 horas então... que tal começar votando agora? Ah, e é claro, obrigada pela ajuda! {0}"
@@ -17,6 +17,12 @@ commands:
   checkOutPatchNotes: "Novidades chegaram! Descubra tudo o que há de novo nas notas do patch: {0}"
   googleRateLimited: "Devido a alterações no limite de requisições do YouTube/Google, este comando está temporariamente desativado. Para mais informações: {0}"
   canaryInstanceDoNotUse: "Você está usando a versão experimental da Loritta. Várias funcionalidades podem não funcionar, posso ficar offline a qualquer momento, seu servidor pode explodir e muito mais! Não reporte problemas da versão experimental caso não seja solicitado, obrigada!"
+  aliases: "Sinônimos"
+  example: "Exemplo"
+  invalidNumber: "Número `{0}` é algo irreconhecível para um bot simples como eu, sorry."
+  invalidColor: "Cor `{0}` é algo irreconhecível para um bot simples como eu, sorry. Lembre-se, eu consigo entender cores em formato RGB, hexadecimal e em formato decimal!"
+  userNotOnTheGuild: "O usuário {0} existe, mas... cadê ele no servidor? E não, ele não está na lata de lixo, eu já procurei lá."
+  guildDoesNotExist: "Eu procurei em todo lugar, mas eu não encontrei nenhum servidor com ID `{0}`! Lembre-se, eu apenas procuro servidores pelo ID delas e eu preciso estar no servidor para poder encontrá-lo!"
   arguments:
     text: "texto"
     number: "número"
@@ -25,9 +31,6 @@ commands:
     image: "imagem"
   # DIVERSÃO
   entertainment: # O nome não é "fun" porque "fun" é uma palavra reservada em Kotlin
-    roll:
-      description: "Rola um dado e fala o resultado dele, perfeito quando você quer jogar um Monopoly maroto mas perdeu os dados."
-      howMuchSides: "Quantos lados o dado que eu irei rolar terá"
     vieirinha:
       description: "Vieirinha é o oráculo de tudo que você deseja saber nesta vida, que tal você perguntar algo para ele?"
       examples:
@@ -112,7 +115,7 @@ commands:
       channelNotFound: "Canal não encontrado!"
     emoji:
       notFoundId: "Enquanto {0} parece ser um ID válido para um emoji... Eu não consegui encontrar ele na minha lista de emojis! Eu só consigo pegar informações de um emoji a partir de um ID caso eu esteja no servidor em que o emoji está..."
-# ECONOMIA
+  # ECONOMIA
   economy:
     raffle:
       quantity-bigger-than-allowed: "Você só pode apostar no máximo **{0} tickets** por rodada!"
