--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -1,5 +1,13 @@
 commands:
  discord:
+  userinfo:
+    sharedServers: "Servidores compartilhados"
+    accountCreated: "Conta criada há"
+    accountJoined: "Entrou há"
+    joinPosition: "Posição de Entrada"
+    permissions: "Permissões"
+    joinPlace: "{0} lugar"
+    boostingSince: "Impulsionando desde"
   channelinfo:
     description: "Mostra informações de um canal de texto"
     channelInfo: "Informações do canal {0}"
@@ -20,6 +28,12 @@ commands:
     roleMembers: "Membros"
     roleColor : "Cor do cargo"
     rolePermissions: "Permissões"
+  addemoji:
+    description: "Adiciona emojis no seu servidor a partir do link da imagem dele. Perfeito se você está cansado de ficar baixando imagens para o seu computador só para adicionar no servidor!"
+    success: "Emoji adicionado com sucesso!"
+    limitReached: "O limite de emojis (50 emojis) já foi batido!"
+    error: "Não consegui adicionar este emoji! Desculpe pela incoveniência. :sob:"
+    emoteTooBig: "O emoji é grande demais! O Discord permite emojis de, no máximo, {0}."
   renameemoji:
     description: "Renomeia um emoji"
     emoteNotFound: "Nenhum emoji encontrado!"
@@ -33,7 +47,7 @@ commands:
   botinfo:
     embedDescription:
       - "Olá, eu me chamo Loritta (ou, como meus amigos próximos me chamam, \"Lori\"), tenho 16 anos e sou apenas um simples bot brasileiro para o Discord com várias funções jamais vistas antes! {6}"
-      - "Atualmente estou espalhando diversão em **{0} servidores** com **{2} comandos inovadores** e já executei **{3} comandos** desde quando eu acordei a **{1}** atrás 😴. Desde 30 de Março de 2017 tentando transformar o mundo em um lugar melhor! {8}"
+      - "Atualmente estou espalhando diversão em **{0} servidores** com **{2} comandos inovadores** e já executei **{3} comandos** nas últimas 24 horas e acordei a **{1}** atrás 😴. Desde 30 de Março de 2017 tentando transformar o mundo em um lugar melhor! {8}"
       - "Eu fui criada em **{4} [Kotlin](https://kotlinlang.org/)** utilizando **{5} [JDA](https://github.com/DV8FromTheWorld/JDA)** e, se você quiser ver meu código-fonte (para ver como eu fui feita), [clique aqui](https://bit.ly/lorittagit)!"
       - "Se você quiser dar uma passadinha no meu website, [clique aqui](https://loritta.website/) e, caso queira me adicionar no seu servidor, [clique aqui](https://loritta.website/dashboard)! {7}"
     honorableMentions:
