--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -3,6 +3,7 @@ commands:
     transactions:
       description: "Veja todas as transações que você recebeu e realizou!"
       title: "Suas Transações"
+      otherUserTransactions: "Transações de {0}"
       sentMoneySonhos: "Enviou {0} sonhos para {1}"
       receivedMoneySonhos: "Recebeu {0} sonhos de {1}"
       sentMoneySonhosTax: "Pagou {0} sonhos em taxas de transações"
@@ -18,6 +19,10 @@ commands:
         nitroBoostBonus: "bônus de Nitro Booster"
         raffle: "lorifa"
         garticosTransfer: "transferência de garticos"
+        background: "compras de background"
+        sparklypower: "SparklyPower"
+        inactiveDailyTax: "taxa de inatividade da conta no daily"
+        coinFlipBet: "apostas de sonhos girando uma moeda"
     raffle:
       lastWinner: "Último ganhador: {0} ({1} Sonhos; {2} Prêmio Final)"
     scratchcard:
@@ -25,3 +30,18 @@ commands:
     scratchcardtop:
       description: "Veja os usuários que ganharam mais sonhos na raspadinha!"
       wonTickets: "{0} sonhos / {1} tickets"
+    pay:
+      selfAccountIsTooNew: "Calma lá né, a sua conta é muito novinha! Para você transferir sonhos, você precisa esperar {0} dias antes de começar a transferir sonhos."
+      otherAccountIsTooNew: "Eu sei que as vezes é legal ajudar os outros... Mas {0} criou a conta faz pouco tempo! Precisa esperar {1} dias antes de {0} poder começar a receber sonhos."
+      selfAccountNeedsToGetDaily: "Parece que você ainda não pegou o seu daily hoje, você só poderá enviar sonhos após você ter pego o daily hoje. Que tal pegar agora? {0}"
+      otherAccountNeedsToGetDaily: "Parece que {0} ainda não pegou o daily hoje, {1} só poderá receber sonhos após ter pego o daily hoje. Que tal ele pegar agora? {2}"
+      maxDailyPaymentReached: "Você chegou no limite de {0} sonhos em transações nas últimas 24 horas, para transferir mais sonhos, faça upgrade para o plano completo! {1}"
+      cantTransferZeroWithTax: "De acordo com os meus cálculos, com a taxa de transação, você iria enviar... zero sonhos! Como você vai enviar zero sonhos? Quer apenas pagar taxas para ajudar a sustentar a LorittaLand, bobinho(a)?"
+    flipcoinbet:
+      description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
+      startBet: "{0}, {1} quer fazer uma aposta com você! Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
+      congratulations: "Parabéns {0}, você ganhou **{1} sonhos**! Financiado por {2} rsrs"
+      notEnoughMoneySelf: "Como você vai apostar uma quantidade que você não tem? Aposte menos se você não quer apostar algo que você nem tem!"
+      notEnoughMoneyInvited: "{0} não tem sonhos suficientes para a sua aposta..."
+      zeroMoney: "Wow, que legal! Você vai apostar *nada*, impressionante!"
+      cantBetSelf: "Como você vai apostar com si mesmo? No final você vai ganhar uns belos... nada!"
