--- a/default/commands-fun.yml
+++ b/default/commands-fun.yml
@@ -52,7 +52,56 @@ commands:
       giveawayStillRunning: "O sorteio que você tentou rolar novos vencedores... bem, ainda está rolando! Se você está querendo finalizar o sorteio, utilize {0}"
       rerolledGiveaway: "Prontinho! Eu rolei novos vencedores para o sorteio que você pediu, agora você pode ficar tranquilo sem precisar fazendo aquele sorriso falso só porque o membro que você odeia ganhou."
     ship:
+      newCouple: "Hmmm, será que nós temos um novo casal aqui?"
       bribeLove: "Sabia que você pode subornar o oráculo do amor para alterar o valor do ship entre você e outra pessoa? {0}"
+      value90: [
+        "😍 %ship% Os dois se amam! 😍",
+        "💗 %ship% Casal mais perfeito? Impossível! 💗",
+        "☠ %ship% Nem a *dona* morte separa! 😂",
+        "😋 %ship% Casal mais perfeito que eu! 😋",
+        "😚 %ship% Casal? Casal que nada! Eles já são casados! 😚"
+      ]
+      value80: [
+        "😏 %ship% Mas esses dois já se conhecem faz muito tempo... 😏",
+        "😊 %ship% Claro que os dois são um lindo casal! 😊",
+        "😜 %ship% Casal mais grudento que Despacito! 😜",
+        "😄 %ship% Se os dois já não namoram eu estaria surpresa! 😄"
+      ]
+      value70: [
+        "🙂 %ship% Prevejo um casal fofo se formando! 🙂",
+        "😄 %ship% Só precisa de um pouco mais de conversa para rolar! 😜",
+        "😊 %ship% Os dois foram feitos um para o outro! 😊",
+        "😄 %ship% Sim! 😄"
+      ]
+      value60: [
+        "🙂 %ship% Se o/a %user% parasse de ser um pouco tímido(a)... 😏",
+        "😊 %ship% Tem um pouco de interesses compatíveis aí 😊",
+        "🙂 %ship% Eu aprovo esse casal! 🙂",
+        "😄 %ship% Sim! 😄"
+      ]
+      value50: [
+        "😶 %ship% Amigos... Mas talvez né... 😏",
+        "😊 %ship% Talvez... Só precisa o/a %user% querer! 😶",
+        "😶 %ship% Eu queria ver esse casal funcionar 😶"
+      ]
+      value40: [
+        "😶 %ship% É... talvez, eu acho... 🙁",
+        "😶 %ship% Nada é impossível, mas... 🙁",
+        "😶 %ship% Se os dois quiserem, talvez dê certo... Mas... 😶"
+      ]
+      value30: [
+        "😕 %ship% Acho que não seria um belo casal... 🙁",
+        "😶 %ship% Parece que só são conhecidos... 😶"
+      ]
+      value20: [
+        "😐 %ship% Se o(a) %user% não tivesse deixado na friendzone... 😐"
+      ]
+      value10: [
+        "😐 %ship% Eu queria muito falar que é possível, mas... 😢"
+      ]
+      value0: [
+        "😭 %ship% As possibilidades de ter este casal são quase impossíveis! 😭"
+      ]
     akinator:
       description: "O Akinator pode ler a sua mente e dizer qual personagem você está pensando! Será que você irá conseguir ganhar dele?"
       question: "Questão {0}"
@@ -70,6 +119,7 @@ commands:
       description: "Rola um dado e fala o resultado dele, perfeito quando você quer jogar um Monopoly maroto mas perdeu os dados."
       howMuchSides: "Quantos lados o dado que eu irei rolar terá"
       invalidBound: "Eu tentei girar o dado mas... ele evaporou! Sumiu! Acho que ele sumiu porque você criou um dado inválido... me diga, como você queria que eu girasse ele?"
+      tooMuchDices: "Eu tentei girar os dados mas são taaaaaantos que não coube na minha mesa e cairam no chão e *poof*, sumiram! Por favor, gire no máximo 100 dados para que eles não caiam novamente."
       result: "rolou **{1}**... e conseguiu **{2}**!"
     ratewaifu:
       note10:
@@ -127,4 +177,45 @@ commands:
       result: "Eu dou nota **{0}** para `{1}`! **{2}**"
     flipcoin:
       heads: "Cara"
-      coroa: "Coroa"
+      tails: "Coroa"
+    cancelled:
+      description: "A sua mana foi canceladx pelas militantes do Twitter! Ah, mas qual foi o motivo do cancelamento?"
+      wasCancelled: "{0} foi cancelado(a) por {1}"
+      reasons:
+      - "ser atraente demais"
+      - "ter charme demais"
+      - "ser uma pessoa horrível"
+      - "ser uma grande gostosa"
+      - "ser boy lixo"
+      - "ser comunista"
+      - "debochar demais"
+      - "ser inteligente demais"
+      - "ser padrãozinho"
+      - "pedir muito biscoito"
+      - "ser corno"
+      - "ser uma delícia"
+      - "ser gado demais"
+      - "não ser ninguém"
+      - "ser poser"
+      - "ser insuportável"
+      - "ser insensível"
+      - "não fazer nada"
+      - "ser trouxa"
+      - "se atrasar sempre"
+      - "ser impaciente demais"
+      - "ter virado o Coronga"
+      - "ser BV"
+      - "ter muita preguiça"
+      - "ser inútil"
+      - "ser inadimplente no Serasa"
+      - "contar muita piada ruim"
+      - "procrastinar demais"
+      - "se considerar incancelável"
+      - "ser menor de idade"
+      - "ser velho"
+      - "ser amigo do Felipe Neto"
+      - "mentir para os seus fãs"
+      - "esquecer de dar créditos para um artista"
+      - "ter chamado alguém com o pronome errado"
+      - "ter votado no Bolsonaro"
+      - "ter votado no Haddad"
