--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /default/*.yml
-    translation: /folder/%two_letters_code%/%original_file_name%
+    translation: /%two_letters_code%/%original_file_name%
