--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -79,3 +79,4 @@ commands:
         ignoredPinnedMessages: "Chat limpo por {0}, porém {1} mensagens não puderam ser deletadas porque eram mensagens fixadas!"
         ignoredTooOldAndPinnedMessages: "Chat limpo por {0}, porém {1} mensagens não puderam ser deletadas por serem enviadas a mais de 2 semanas e {2} mensagens não puderam ser deletadas porque eram mensagens fixadas!"
         success: "Chat limpo por {0}!"
+        sucess: "Chat limpo por {0}!"
