--- a/.github/workflows/automerge-crowdin.yml
+++ b/.github/workflows/automerge-crowdin.yml
@@ -26,4 +26,4 @@ jobs:
           number: ${{ github.event.pull_request.number }}
           allowed-usernames-regex: ^MrPowerGamerBR$
           merge-method: squash
-          merge-title: "Update translations 🌎 (Crowdin)"
+          merge-title: "🤖 Automatically merge translations from Crowdin 🌎"
