--- a/default/commands-utils.yml
+++ b/default/commands-utils.yml
@@ -1,12 +1,15 @@
 commands:
   utils:
     calc:
+      description: "Calcula uma expressão aritmética"
       invalid: "Desculpe, mas eu não acho que `{0}` seja uma expressão aritmética... Ou talvez seja a minha burrice, afinal, eu estou perdendo o meu tempo no Discord em vez de prestar atenção na aula."
       result: "**Resultado:** `{0}`"
     anagram:
+      description: "Crie um anagrama de uma palavra!"
       result: "**O seu anagrama é...** `{0}`"
       stats: "A palavra `{0}` possui **{1} anagramas diferentes**!"
     colorinfo:
+      description: "Veja informações sobre uma cor!"
       shades: "Tons"
       tints: "Matizes"
       triadic: "Triádica"
