RepList Command Locales

--- a/default/commands-social.yml
+++ b/default/commands-social.yml
@@ -31,3 +31,14 @@ commands:
       description: "Ativa ou desativa as notificações de level up via mensagem direta"
       enabledNotifications: "Você ativou as notificações de level up via mensagem direta!"
       disabledNotifications: "Você desativou as notificações de level up via mensagem direta!"
+    repList:
+        description: "Veja as suas reputações enviadas ou recebidas!"
+        title: "Histórico de Reputações"
+        otherUserRepList: "Histórico de Reputações de {0}"
+        noReps: "Nenhuma reputação enviada ou recebida para poder aparecer aqui..."
+        reputationsTotalDescription: "Total de {0} reputações recebidas e {1} reputações enviadas"
+        receivedReputationByLoritta: "{0} foi uma pessoa incrível e ganhou uma reputação minha!"
+        receivedReputation: "Reputação recebida de {0}"
+        receivedReputationWithContent: "Reputação recebida de {0} com a mensagem: {1}"
+        sentReputation: "Reputação enviada para {0}"
+        sentReputationWithContent: "Reputação enviada para {0} com a mensagem: {1}"
