--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -35,8 +35,21 @@ commands:
       otherAccountIsTooNew: "Eu sei que as vezes é legal ajudar os outros... Mas {0} criou a conta faz pouco tempo! Precisa esperar {1} dias antes de {0} poder começar a receber sonhos."
       selfAccountNeedsToGetDaily: "Parece que você ainda não pegou o seu daily hoje, você só poderá enviar sonhos após você ter pego o daily hoje. Que tal pegar agora? {0}"
       otherAccountNeedsToGetDaily: "Parece que {0} ainda não pegou o daily hoje, {1} só poderá receber sonhos após ter pego o daily hoje. Que tal ele pegar agora? {2}"
-      maxDailyPaymentReached: "Você chegou no limite de {0} sonhos em transações nas últimas 24 horas, para transferir mais sonhos, faça upgrade para o plano completo! {1}"
-      cantTransferZeroWithTax: "De acordo com os meus cálculos, com a taxa de transação, você iria enviar... zero sonhos! Como você vai enviar zero sonhos? Quer apenas pagar taxas para ajudar a sustentar a LorittaLand, bobinho(a)?"
+      youAreGoingToTransfer: "Você está prestes a transferir {0} sonhos para {1}!{2}"
+      randomQuirkyRichMessages:
+      - "Está querendo ostentar que você é rico transferindo tanto dinheiro assim?"
+      - "Ser rico é legal, mas comprar Loritta Premium que é bom, nada né?"
+      - "iala olha o rico kkk"
+      - "Queria ser tão rica assim para transferir tantos sonhos assim..."
+      - "Nossa, mas transferir humildes 100k para mim você não transfere, né?"
+      - "Saudades daqueles sonhos que a gente nunca teve"
+      - "Nossa mas vai transferir tudo isso? Vai ficar pobre rsrs"
+      - "Se depois quiser repor esses sonhos perdidos, que tal comprar sonhos na minha loja?"
+      - "kk eae que tal transferir um pouquinho para mim também?"
+      - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
+      - "Eu também amo sonhos, mas mesmo assim não ficam transferindo tantos sonhos para mim livremente"
+      - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
+      clickToAcceptTheTransaction: "Clique em {0} para aceitar a transação!"
     flipcoinbet:
       description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
       startBet: "{0}, {1} quer fazer uma aposta com você! Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
