Remove derpy message

--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -47,7 +47,7 @@ commands:
       - "Se depois quiser repor esses sonhos perdidos, que tal comprar sonhos na minha loja?"
       - "kk eae que tal transferir um pouquinho para mim também?"
       - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
-      - "Eu também amo sonhos, mas mesmo assim não ficam transferindo tantos sonhos para mim livremente"
+      - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
       - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
       clickToAcceptTheTransaction: "Clique em {0} para aceitar a transação!"
     flipcoinbet:
