--- a/default/commands-images.yml
+++ b/default/commands-images.yml
@@ -66,22 +66,22 @@ commands:
     tristerealidade:
       description: "Cria uma triste realidade com os membros do seu servidor... É, nem sempre a gente sai ganhando."
       slot:
-        '0':
+        theGuyYouLike:
           MALE: "O CARA QUE VOCÊ GOSTA" 
           FEMALE: "A MINA QUE VOCÊ GOSTA"
-        '1':
+        theFather:
           MALE: "O PAI {0}" 
           FEMALE: "A MÃE {0}"
-        '2':
+        theBrother:
           MALE: "IRMÃO {0}" 
           FEMALE: "IRMÃ {0}"
-        '3':
+        theFirstLover:
           MALE: "PRIMEIRO AMOR {0}" 
           FEMALE: "PRIMEIRO AMOR {0}"
-        '4':
+        theBestFriend:
           MALE: "MELHOR AMIGO {0}" 
           FEMALE: "MELHOR AMIGA {0}"
-        '5':
+        you:
           MALE: "VOCÊ" 
           FEMALE: "VOCÊ"
     ascii:
